--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -88,6 +88,7 @@
 				<p><span class="bounty"><span class="currencySymbol">$</span>{{question.price}}</span></p>
 				{% if question.is_answered %}<p>&#x2713;</p>{% endif %}
 				<p>{{ question.user.email }}</p>
+				<p>{{ question.created|timesince }} ago</p>
 			</div>
 			<div class="body shadowBox">
 				{{question.text|markdown}}
