fixed border around pay now button

--- a/main/templates/ask.html
+++ b/main/templates/ask.html
@@ -41,6 +41,7 @@
 		}
 		button[type=submit] {
 			background-color: transparent;
+			border: none;
 			cursor: pointer;
 		}
 		button[type=submit]:hover { opacity: 0.9; }
