improved markdown formatting css

--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -42,6 +42,17 @@
 			float: right;
 			width: 700px;
 		}
+		div.question pre, div.answer pre {
+			background-color: #ddd;
+			margin: 1em 0;
+			overflow: auto;
+			padding: 1em;
+			width: 850px;
+		}
+		div.question code, div.answer code {
+			font-family: 'Consolas', 'Monaco', 'Lucida Console', 'Courier New', monospace;
+			line-height: 1.25em;
+		}
 		div#answererTeaser {
 			color: #525252;
 			font-size: 197%;
