--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -4,6 +4,7 @@
 		<link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.png" />
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssfonts/fonts-min.css">
+		<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/global.css" />
 		<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" />
 		<style>div#shadowSeparator { background-image:url({{ MEDIA_URL }}images/shadow.png); }</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
