--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -120,7 +120,7 @@
 			{% endif %}
 			<div style="clear: both;"></div>
 		</div>
-		{% if not is_q and not question.is_answered and not is_postback %}
+		{% if not is_q and not question.is_answered and not showForm %}
 			<div id="answererTeaser">
 				<p>Get <span style="color: #f79939; font-weight: bold;">${{ question.price }}</span> for posting the best answer!*</p>
 				<p><a href="#" class="ask"></a></p>
@@ -135,7 +135,7 @@
 			</script>
 		{% endif %}
 		{% if not is_q and not question.is_answered %}
-			<form id="answer" method="POST"{% if not is_postback %} style="display: none;"{% endif %}>
+			<form id="answer" method="POST"{% if not showForm %} style="display: none;"{% endif %}>
 		   		<p>{{ answerForm.non_field_errors }}</p>
 				<p>{{ answerForm.text.errors }}</p>
 				<p>{{ answerForm.text.label_tag }}<br>
