profile page allows username/email to be changed

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -36,10 +36,10 @@
 				</style>
 				{% if user.email %}
 					<div id="username" class="auth">
-						{{user.email}} &#9662;
+						{{user.username}} &#9662;
 					</div>
 					<div id="usernameMenu" class="auth" style="display: none;">
-						<p>{{user.email}} &#9652;</p>
+						<p>{{user.username}} &#9652;</p>
 						<br>
 						<p><a href="/profile">edit your profile</a></p>
 						<br>
