--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -14,7 +14,8 @@
 			padding: 1em;
 		}
 		span.number { color: orange; }
-		form p, form li { font-size: 123.1%; margin: 0.5em 0; }
+		form p, form li { margin: 0.5em 0; }
+		form p, form li, form input { font-size: 123.1%; }
 	</style>
 	<div id="content">
 		<h1>{{ user.username }}'s profile</h1>
