--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -60,11 +60,11 @@
 			text-align: center;
 		}
 		a.ask {
-			background-image: url({{ MEDIA_URL }}images/askButton.png);
+			background-image: url({{ MEDIA_URL }}images/answerButton.png);
 			display: block;
-			height: 84px;
+			height: 80px;
 			margin: 12px auto;
-			width: 417px;
+			width: 316px;
 		}
 		a.ask:hover {
 			background-position: center bottom;
