--- a/main/templates/ask.html
+++ b/main/templates/ask.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}ask - code4cheap{% endblock %}
+{% block title %}Ask - code4cheap{% endblock %}
 {% block content %}
 	<style>
 		div.askBlock {
