--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}profile - code4cheap{% endblock %}
+{% block title %}Profile - code4cheap{% endblock %}
 {% block content %}
 	<style>
 		div#content { margin: 1em; }
