--- a/main/templates/tos.html
+++ b/main/templates/tos.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Terms of Service{% endblock %}
+{% block title %}Terms of Service - code4cheap{% endblock %}
 {% block content %}
 	Terms of Service<br>
 	<br>
