--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load markup %}
-{% block title %}QA: {{question.text|truncatewords:5}}{% endblock %}
+{% block title %}{{question.text|truncatewords:5}} - code4cheap{% endblock %}
 {% block content %}
 	<style>
 		div.column {
