--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -91,6 +91,7 @@
 			{% block content %}{% endblock %}
 		</div>
 		<div id="footer">
+			<a href="/faq">FAQ</a> &nbsp; 
 			<a href="http://code4cheap.tumblr.com/">Blog</a> &nbsp; 
 			<a href="http://twitter.com/code4cheap">Twitter</a> &nbsp; 
 			<a href="http://www.facebook.com/pages/Code4cheap/201874853171539">Facebook</a> &nbsp; 
