pointed favicon at right location

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>{% block title %}{% endblock %}</title>
-		<link rel="shortcut icon" href="{{ MEDIA_URL }}favicon.png" />
+		<link rel="shortcut icon" href="{{ MEDIA_URL }}images/favicon.png" />
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssfonts/fonts-min.css">
 		<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/global.css" />
