fixed too long questions

--- a/main/templates/questions.html
+++ b/main/templates/questions.html
@@ -15,6 +15,7 @@
 		}
 		div.questionText {
 			height: 6.75em;
+			max-width: 580px;
 			overflow: hidden;
 		}
 		table.questionBox:hover div.questionFade {
