--- a/main/templates/faq.html
+++ b/main/templates/faq.html
@@ -10,39 +10,54 @@
 	</style>
 	<div style="margin: 0 10px;">
 		<h1>How does this work?</h1>
-		<p>answer</p>
-		
-		<h1>I posted a question/answer, but I don’t see it. Where did it go?</h1>
-		<p>Sometimes it takes a couple of minutes for it to appear after posting. If it’s been longer than that, make sure you’ve activated your account.</p>
+		<p>code4cheap.com connects people who need code with programmers who write code. (It’s kind of like 99designs, but for programming.) Here’s how it works: you post a question with a bounty and then wait for answers to appear. Once they start rolling in, choose the best answer to send your bounty to the person who did the best work. You set the price and you decide which answer wins. And if you aren’t completely satisfied, we’ll refund your money with no questions asked.</p>
 
-		<h1>How do you get quality answers?</h1>
-		<p>answer</p>
+		<h1>Why should I use code4cheap.com instead of StackOverflow or Rentacoder?</h1>
+		<p>code4cheap.com is for problems that fall in between StackOverflow and Rentacoder. Sometimes you have a question so complicated that nobody on StackOverflow wants to answer it for free. But maybe your problem would really only take someone a couple hours -- not worth the overhead of using Rentacoder for such a small problem.</p>
 
-		<h1>What compels Qs to pay?</h1>
-		<p>answer</p>
+		<p>And that’s when you should use code4cheap.com: when you need some code that’s too big for StackOverflow and too small for Rentacoder.
+		(StackOverflow and Rentacoder are trademarks of their respective owners.)</p>
+
+		<h1>What if I don’t like the answers I get?</h1>
+		<p>Don’t worry. If you aren’t completely satisfied, we’ll refund your money with no questions asked. If you aren’t happy, we aren’t happy. Also, you might want to check out Tips on How to Get Your Question Answered.</p>
+
+		<h1>How do I get my money? or What forms of payment do you accept?</h1>
+		<p>code4cheap.com uses Amazon Payments. If you have (or create) a regular Amazon.com account, you can send and receive payments with us. Amazon Payments accepts most major credit cards and bank debits.</p>
+
+		<h1>Can I post homework problems?</h1>
+		<p>Absolutely!</p>
+
+		<h1>I posted an answer to a question. When will I get paid?</h1>
+		<p>You will be paid within 48 hours of the questioner marking your answer correct.</p>
+
+		<h1>If I answer a question correctly, what compels the questioner to pay?</h1>
+		<p>To post a question on code4cheap.com, questioners must pay their bounty up front. We hold the money until a correct answer is selected, at which point we pass it on to the person whose answer was marked correct. If you posted a correct answer and the questioner hasn’t selected it in over a week, please let us know so we can investigate.</p>
+
+		<h1>How do I get quality answers?</h1>
+		<p>By making sure your question addresses these tips:</p>
+		<ul>
+			<li><b>Be detailed.</b> People won’t even try to answer your question if they aren’t sure what you want -- it’s not worth the risk for them to start coding when you might not be happy with their answer.</li>
+
+			<li><b>Make your request clear and straightforward.</b> If you have a long question, include a clear-cut task at the end. Example: 
+			I need a template for a Firefox extension that shows an option in the context menu that changes depending on what is highlighted. I will write the logic for the bulk of the extension, but it must be fully functional aside from that logic. Here are examples of how it must function:
+			When text is highlighted and right-clicked, the context menu should display an item containing the text that was highlighted.
+			When an image is highlighted and right-clicked, the context menu should display an item containing the filename of the image.</li>
+
+			<li><b>Choose a reasonable price.</b> It is unlikely someone will write a two-hour Firefox extension for $5, but you can probably get one for $20 or $30. When choosing your price, consider how long someone will need to work on your problem. And then remember that it probably really takes longer than that.</li>
+		</ul>
 
 		<h1>Is there a reputation system?</h1>
-		<p>answer</p>
+		<p>Not yet.</p>
 
-		<h1>Can the bounty be split?</h1>
-		<p>answer</p>
+		<h1>Can I ask a question but keep the answers private?</h1>
+		<p>Not yet. This is an often-requested feature, but there are only so many features we can add at any given moment. If you’re interested in posting a private question, though, let us know. If enough people are interested, we’ll make this higher on our list of priorities.</p>
 
-		<h1>Why the commission?</h1>
-		<p>answer</p>
+		<h1>Can the bounty be split between two people who answer a question?</h1>
+		<p>Not yet. If you really think that two people deserve to split the bounty, email us and we’ll see what we can do.</p>
 
-		<h1>Why is this better than x?</h1>
-		<p>answer</p>
+		<h1>I posted a question/answer, but I don’t see it. Where did it go?</h1>
+		<p>Don’t worry, it’s still there. Sometimes it takes a couple of minutes for a question or answer to appear after posting. If it’s been longer than that, make sure you’ve activated your account -- you should have an email from us with a link you can use to activate it.</p>
 
-		<h1>Can I post homework?</h1>
-		<p>answer</p>
-
-		<h1>How will you stop cheating by answering own question?</h1>
-		<p>answer</p>
-
-		<h1>Timeline on posting answers, getting paid?</h1>
-		<p>answer</p>
-
-		<h1>Customer service contact information?</h1>
-		<p>answer</p>
+		<p>Have a question? Contact us at <a href="mailto:code4cheap@gmail.com">code4cheap@gmail.com</a>.
 	</div>
 {% endblock %}
